# ai-sales-agent

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  bot.py  call_recorder.py  campaign_manager.py  main.py  pyproject.toml  sales_context.py  server.py  twobot.py
data/templates/: leads_template.csv
utils/: csv_handler.py
