[project]
name = "ai-sales-agent"
version = "0.1.0"
description = "AI voice agent for outbound sales calls using Pipecat framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pipecat-ai[google,deepgram,cartesia]>=0.0.50",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pandas>=2.1.3",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.1",
    "loguru>=0.7.2",
    "python-dateutil>=2.8.2",
    "aiofiles>=23.2.0",
    "python-multipart>=0.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
exclude = [".git", "*_pb2.py"]
line-length = 100

[tool.ruff.lint]
select = ["I"]
ignore = []
